infrastracture/application/zipkin/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: zipkin
  namespace: fengxin58
spec:
  selector:
    matchLabels:
      k8s-app: zipkin
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin:2.6.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9411
