infrastracture/application/zipkin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: fengxin58
spec:
  ports:
  - port: 9411
    targetPort: 9411
  selector:
    k8s-app: zipkin
  type: ClusterIP
