infrastracture/application/zipkin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: ci
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitlab.suerlink.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 10080
